--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,26 +32,26 @@ classifiers = [
 ]
 
 dependencies = [
-  "spacy~=3.7.5",
-  "pandas~=2.2.2",
-  "pyarrow~=17.0.0",
-  "jupyter~=1.0.0",
-  "ipywidgets~=8.1.3",
-  "ipykernel~=6.29.5",
-  "numpy~=1.26.4",
-  "beautifulsoup4~=4.12.3",
-  "requests~=2.32.3",
-  "lxml~=5.2.2",
-  "python-dotenv~=1.0.1",
-  "textdescriptives~=2.8.2",
-  "scikit-learn~=1.5.1",
-  "matplotlib~=3.9.1",
-  "seaborn~=0.13.2",
-  "pandarallel~=1.6.5",
-  "tqdm~=4.66.4",
-  "openai~=1.42.0",
-  "anthropic~=0.34.1",
-  "pytest~=8.3.2",
+  "spacy>=3.7.5",
+  "pandas>=2.2.2",
+  "pyarrow>=17.0.0",
+  "jupyter>=1.0.0",
+  "ipywidgets>=8.1.3",
+  "ipykernel>=6.29.5",
+  "numpy>=1.26.4",
+  "beautifulsoup4>=4.12.3",
+  "requests>=2.32.3",
+  "lxml>=5.2.2",
+  "python-dotenv>=1.0.1",
+  "textdescriptives>=2.8.2",
+  "scikit-learn>=1.5.1",
+  "matplotlib>=3.9.1",
+  "seaborn>=0.13.2",
+  "pandarallel>=1.6.5",
+  "tqdm>=4.66.4",
+  "openai>=1.42.0",
+  "anthropic>=0.34.1",
+  "pytest>=8.3.2",
 ]
 
 [project.urls]
